fixed Button frame visibility flag. working on purchase list

--- a/vpn/qml/widgets/dapqml-widgets-asset/brand/KelVPN/style.css
+++ b/vpn/qml/widgets/dapqml-widgets-asset/brand/KelVPN/style.css
@@ -434,3 +434,17 @@
 	color: "#04004E";
 }
 
+/****************************************************
+ * Purchase
+ ***************************************************/
+
+.purchase-btn-resizer
+{
+	scaled-rect: scaled(nan,nan,390,130,true);
+	color: "#04004E";
+}
+
+.purchase-listview
+{
+	scaled-rect: scaled(-1,nan,390,nan,false);
+}
